force-app/main/default/objects/Budget_Line__c/Budget_Line__c.object-meta.xml
<CustomObject>
    <description>This is used for storing the budget lines against</description>
    <label>Budget Line</label>
    <nameField>
        <displayFormat>BLID-{000000000}</displayFormat>
        <label>Budget Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>