force-app/main/default/objects/Budget_Line__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>