force-app/main/default/objects/Budget_Line__c/fields/Budget_Version__c.field-meta.xml
<CustomField>
    <fullName>Budget_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Version</label>
    <referenceTo>Budget_Version__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>