force-app/main/default/objects/Budget_Line__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <formula>Projected__c -  Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>