force-app/main/default/objects/Budget_Line__c/fields/Projected__c.field-meta.xml
<CustomField>
    <fullName>Projected__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Projected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>