force-app/main/default/objects/Budget_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Budget_Version__c</columns>
    <columns>Budget_Year__c</columns>
    <columns>Projected__c</columns>
    <columns>Actual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>